[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "dummy_project"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
dummy-project = "dummy_project.__main__:main"

[tool.kedro]
package_name = "dummy_project"
project_name = "dummy_project"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "dummy_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "KEDRO_TELEMETRY_TEST"
